vlib/v/checker/tests/lock_needed.out
vlib/v/checker/tests/lock_needed.vv:10:2: error: `abc` is `shared` and needs explicit lock for `v.ast.SelectorExpr`
    8 |         x: 5
    9 |     }
   10 |     abc.x++
      |     ~~~
   11 |     println(abc.x)
   12 | }
vlib/v/checker/tests/lock_needed.vv:11:10: error: abc is `shared` and must be `rlock`ed or `lock`ed to be used as non-mut argument to print
    9 |     }
   10 |     abc.x++
   11 |     println(abc.x)
      |             ~~~
   12 | }
